--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 [{
 "image":"https://firebasestorage.googleapis.com/v0/b/photo-to-link.appspot.com/o/8958735?alt=media&token=032e1ea4-3304-465e-97b7-2ec50ae77683",
 "name":"Mask Girl 2023",
-"link1":"_http://www.zegomovie.com/Videos/MaskGirlEp1/index.m3u8",
-"link2":"_http://www.zegomovie.com/Videos/MaskGirlEp2/index.m3u8",
+"link1":"http://www.zegomovie.com/Videos/MaskGirlEp1/index.m3u8",
+"link2":"http://www.zegomovie.com/Videos/MaskGirlEp2/index.m3u8",
 "link3":"http://www.zegomovie.com/Videos/MaskGirlEp3/index.m3u8",
 "link4":"http://www.zegomovie.com/Videos/MaskGirlEp4/index.m3u8",
 "link5":"http://www.zegomovie.com/Videos/MaskGirlEp5/index.m3u8",
